# myshellrs

./: Cargo.toml  README.md  ls-util
crates/: Cargo.toml  README.md
crates/ls-util/: Cargo.toml
crates/ls-util/src/: ls.rs  main.rs
src/: ls.rs  main.rs  table.rs
