[package]
name = "ls-util"
version = "0.1.0"
authors = ["treemcgee42 <varun.malladi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdout-tables = { path = "/Users/ogmalladii/Documents/rust/stdout-tables" }
clap = { version = "~2.33.0" }